# wokwi-buzzer-rs

./: Cargo.toml  README.md  diagram.json  wokwi.toml
src/: lcd.rs  main.rs
