[package]
name = "wokwi-buzzer-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.3"
embedded-hal = "1.0.0"
hd44780-driver = { git = "https://github.com/JohnDoneth/hd44780-driver.git", rev = "9009f2c" }
heapless = "0.8.0"
libm = "0.2.15"
panic-halt = "0.2.0"
rp-pico = "0.9.0"
